Fixed navigation tabs icon spacing for right-to-left languages

--- a/src/assets/stylesheets/main/layout/_tabs.scss
+++ b/src/assets/stylesheets/main/layout/_tabs.scss
@@ -89,7 +89,7 @@
     // Navigation tabs link icon
     svg {
       height: 1.3em;
-      margin-right: px2rem(8px);
+      margin-inline-end: px2rem(8px);
       fill: currentColor;
     }
 
